fix: stepper center align text

--- a/src/app/base/components/Stepper/_index.scss
+++ b/src/app/base/components/Stepper/_index.scss
@@ -19,6 +19,7 @@
       margin-bottom: $spv--x-small;
 
       &::before {
+        text-align: center;
         background-color: $color-light;
       }
 
